<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>aslam_cameras</name>
  <version>0.0.1</version>
  <description>
     aslam_cameras
  </description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>aslam_common</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>opencv2_catkin</build_depend>
  <build_depend>sm_property_tree</build_depend>
  <build_depend>minkindr</build_depend>

  <run_depend>aslam_common</run_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>gflags_catkin</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>opencv2_catkin</run_depend>
  <run_depend>sm_property_tree</run_depend>
  <run_depend>minkindr</run_depend>
  
</package>
