<?xml version="1.0"?>
<package format="2">
  <name>aslam_cv</name>
  <version>0.0.1</version>
  <description>aslam_cv</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>doxygen_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>opencv_catkin</depend>


</package>

