<?xml version="1.0"?>
<package format="2">
  <name>aslam_cv</name>
  <version>0.0.1</version>
  <description>aslam_cv</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv2_catkin</depend>
  <depend>sm_property_tree</depend>
  <depend>minkindr</depend> 
  <depend>doxygen_catkin</depend>
  <depend>opengv</depend>
  <depend>brisk</depend>

</package>
