<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>aslam_cv_build</name>
  <version>0.0.1</version>
  <description>Shared build settings for all aslam packages.</description>
  <maintainer email="schneith@ethz.ch">schneith</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>catkin</depend>
  <depend>catkin_simple</depend>
</package>
