<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>aslam_cv_common</name>
  <version>3.1.0</version>
  <description>aslam_cv_common</description>
  <maintainer email="developers@sevensense.ch">Sevensense developers</maintainer>
  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <depend>opencv3_catkin</depend>
  <depend>yaml_cpp_catkin</depend>
</package>
