<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>aslam_cv_lines</name>
  <version>3.1.0</version>
  <description>aslam_cv_lines</description>
  <maintainer email="developers@sevensense.ch">Sevensense developers</maintainer>
  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
</package>
