<?xml version="1.0"?>
<package format="2">
  <name>aslam_cv_python</name>
  <version>0.0.1</version>
  <description>aslam_cv_python</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>python_module</depend>
  <depend>numpy_eigen</depend>

</package>

