<?xml version="1.0"?>
<package format="2">
  <name>aslam_cv_matcher</name>
  <version>0.0.1</version>
  <description>aslam_cv_matcher</description>
  <maintainer email="schneith@ethz.ch">schneith</maintainer>
  <maintainer email="simon.lynen@gmail.com">simonlynen</maintainer>
  <license>closed</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_common_private</depend>
  <depend>aslam_cv_frames</depend>
  <depend>doxygen_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>libnabo</depend>
  <depend>minkindr</depend>
  <depend>opencv3_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>yaml_cpp_catkin</depend>
</package>
